sumo/tests/traci/VariableRetrieval/Lane/errors/UnknownID/testclient.prog
simstep 5 1
getvariable 163 48 xxx
simstep 6 1
